Revise README for OOP2 assignment updates
Updated project details for OOP2 assignment, added advanced features and requirements.